--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -8,21 +8,29 @@ body {
     background: radial-gradient(circle, #2b2b2b, #000000);
 }
 
-.restaurante {
+/* HEADER */
+header {
+    max-width: 90%;
+    margin: 0 auto;
+}
+
+header>.restaurante {
     text-align: center;
-    margin: 10px;
+    margin-top: 10px;
 }
 
 .borda {
-    width: 90%;
-    margin: 20px auto;
-
     opacity: 0.7;
 }
 
 .categorias {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
+
+    margin: 5px 0px;
     text-align: center;
-    margin: 10px;
 }
 
 .categoria>p {
@@ -30,10 +38,9 @@ body {
 }
 
 .categorias>button {
-    background-color: #560100;
     padding: 7px;
-    margin: 4px;
 
+    background-color: #560100;
     border: none;
     border-radius: 10px;
     box-shadow: 3px 3px 10px 1px #000000;
@@ -69,18 +76,20 @@ body {
     margin: 20px 0px;
 }
 
-/* BASE */
+/* MAIN */
+main {
+    max-width: 90%;
+    margin: 0 auto;
+}
 
 .conteudo-pratos {
     background-color: #560100;
     background: linear-gradient(to bottom, #560100, #1d0201);
     border: 4px solid #7a1110;
-    box-shadow: 3px 3px 20px 1px black;
-    padding: 32px;
-    width: 90%;
-    margin: 0 auto;
-
     border-radius: 10px;
+    box-shadow: 3px 3px 20px 1px black;
+
+    padding: 20px;
 }
 
 .conteudo-pratos>li {
@@ -88,8 +97,13 @@ body {
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 
-    margin: 10px 0px;
+    margin-bottom: 23px;
+}
+
+.conteudo-pratos>li:last-child {
+    margin-bottom: 0px;
 }
 
 .prato {
@@ -103,6 +117,12 @@ footer {
     display: flex;
     justify-content: space-between;
 
-    width: 90%;
+    max-width: 90%;
     margin: 0 auto;
+}
+
+footer>.restaurante {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
 }
