--- a/assets/styles/imgs.css
+++ b/assets/styles/imgs.css
@@ -25,11 +25,12 @@
 
 /* FOOTER */
 .rede-sociais-img {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 
-.rede-sociais-img-ifood {
-    width: 55px;
-    height: 40px;
+.criador>img {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
