--- a/assets/styles/imgs.css
+++ b/assets/styles/imgs.css
@@ -29,6 +29,11 @@
     height: 30px;
 }
 
+.rede-sociais-img-pedeaqui {
+    width: 70px;
+    height: 30px;
+}
+
 .criador>img {
     border-radius: 50%;
     width: 50px;
