--- a/assets/styles/font-colors.css
+++ b/assets/styles/font-colors.css
@@ -67,7 +67,7 @@
     font-weight: 400;
 }
 
-.criador>figcaption {
+.criador>span {
     color: #bdbaba;
 
     font-family: "romanovsky-bold", sans-serif;
