--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3,6 +3,7 @@ main {
     margin: 0 auto;
 }
 
+/* NAVBAR */
 .categorias {
     display: flex;
     flex-wrap: wrap;
@@ -63,6 +64,7 @@ main {
     background-color: #9e401e;
 }
 
+/* INTRODUÇÃO MAIN */
 #intro {
     text-align: center;
     margin: 20px auto;
@@ -75,8 +77,7 @@ main {
 }
 
 .conteudo-pratos {
-    background-color: #560100;
-    background: linear-gradient(to bottom, #560100, #1d0201);
+    background-color: #420604;
     border: 4px solid #7a1110;
     border-radius: 10px;
     box-shadow: 3px 3px 20px 1px black;
@@ -91,7 +92,10 @@ main {
     align-items: center;
     gap: 10px;
 
-    margin-bottom: 23px;
+    padding: 10px 0px;
+    margin-bottom: 13px;
+
+    background:radial-gradient(circle, #560100 70%, #420604);
 }
 
 .conteudo-pratos>li:last-child {
